# ReKameo

./: .gitignore  CMakeLists.txt  README.md  kameo_config.toml
.github/workflows/: _build.yml  ci.yml
rex/platform/: fpscr.h
src/: kameo_app.h  kameo_dlc_swap.h  kameo_hooks.cpp  kameo_hooks.h  main.cpp
